MediaGallery: Fix bounds check when loading files from file picker

--- a/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
+++ b/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
@@ -159,7 +159,7 @@
                 if (pasteMode === 0) {
                     const files = $("#filePicker").prop('files');
                     
-                    if (!files || files.length < 0) {
+                    if (!files || files.length <= 0) {
                         showErrorModal("No files selected.");
                         return;
                     }
