ThreadEdit: Set index default group cookie on save

--- a/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
+++ b/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
@@ -193,6 +193,11 @@
         }
         
         function handleAjaxDone(data) {
+            let date = new Date();
+            date.setFullYear(date.getFullYear() + 2);
+            
+            document.cookie = "index-current-group=" + currentThread.target_group + "; path=/; expires=" +  date.toUTCString() + "; samesite=strict";
+                            
             window.location = "/";
         }
         
