MediaEdit: Only use 50% width on lg and larger viewports

--- a/BlueBirdDX.WebApp/Pages/MediaEdit.cshtml
+++ b/BlueBirdDX.WebApp/Pages/MediaEdit.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Edit Media</h2>
 
-<div class="d-grid gap-3 w-50">
+<div class="d-grid gap-3 w-lg-50">
     <div>
         <label for="nameInput" class="form-label">Name</label>
         <input id="nameInput" class="form-control" type="text">
