Layout: Add dark mode support

--- a/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
+++ b/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/BlueBirdDX.WebApp.styles.css" asp-append-version="true"/>
+    
+    <!-- put this script tag here so it loads ASAP -->
+    <script src="~/js/bs-theme-switcher.js" asp-append-version="true"></script>
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-page="/Index">BlueBirdDX.WebApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -24,13 +27,13 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/media">Media Gallery</a>
+                        <a class="nav-link" href="/media">Media Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@DbSettings.MongoExpressUrl">Mongo Express</a>
+                        <a class="nav-link" href="@DbSettings.MongoExpressUrl">Mongo Express</a>
                     </li>
                 </ul>
             </div>
