--- a/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
+++ b/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 - BlueBirdDX.WebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2024 OatmealDome
     </div>
 </footer>
 
