ThreadEdit: Fix incorrect label targets for target flag checkboxes

--- a/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
+++ b/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
@@ -35,15 +35,15 @@
     <div>
         <div class="form-check form-check-inline">
             <input id="targetCheckTwitter" class="form-check-input" type="checkbox" value="post_to_twitter">
-            <label class="form-check-label" for="stateRadioDraft">Twitter</label>
+            <label class="form-check-label" for="targetCheckTwitter">Twitter</label>
         </div>
         <div class="form-check form-check-inline">
             <input id="targetCheckBluesky" class="form-check-input" type="checkbox" value="post_to_bluesky">
-            <label class="form-check-label" for="stateRadioDraft">Bluesky</label>
+            <label class="form-check-label" for="targetCheckBluesky">Bluesky</label>
         </div>
         <div class="form-check form-check-inline">
             <input id="targetCheckMastodon" class="form-check-input" type="checkbox" value="post_to_mastodon">
-            <label class="form-check-label" for="stateRadioDraft">Mastodon</label>
+            <label class="form-check-label" for="targetCheckMastodon">Mastodon</label>
         </div>
     </div>
     <label class="form-label mb-0">State</label>
