--- a/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
+++ b/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using BlueBirdDX.WebApp.Models
+@using BlueBirdDX.WebApp.Models
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @inject DatabaseSettings DbSettings
 
@@ -46,7 +46,7 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
+<footer class="border-top footer text-muted" id="footer">
     <div class="container">
         &copy; 2024 OatmealDome
     </div>
