Index: Add new thread and jump to header buttons at the bottom of the page

--- a/BlueBirdDX.WebApp/Pages/Index.cshtml
+++ b/BlueBirdDX.WebApp/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @inject DatabaseService Database
 @using BlueBirdDX.WebApp.Services
 @using MongoDB.Driver
@@ -60,6 +60,11 @@
     <tbody>
     </tbody>
 </table>
+
+<div class="text-end mt-2">
+    <a class="btn btn-primary" href="/thread/new" role="button">New Thread</a>
+    <a class="btn btn-success" href="#header" role="button">⏫</a>
+</div>
 
 <!-- Error modal -->
 <div id="error-modal" class="modal" tabindex="-1">
