--- a/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
+++ b/BlueBirdDX.WebApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-@using BlueBirdDX.WebApp.Models
+﻿@using BlueBirdDX.WebApp.Models
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @inject DatabaseSettings DbSettings
 
@@ -16,7 +16,7 @@
     <script src="~/js/bs-theme-switcher.js" asp-append-version="true"></script>
 </head>
 <body>
-<header>
+<header id="header">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-page="/Index">BlueBirdDX.WebApp</a>
