--- a/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
+++ b/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
@@ -83,7 +83,7 @@
     <button id="addPostButton" class="btn btn-secondary">Add Post</button>
 </div>
 
-<div class="text-end w-50 mt-3">
+<div class="text-end w-lg-50 mt-3">
     <button id="saveButton" class="btn btn-primary">Save</button>
 </div>
 
