MediaGallery: Add jump to bottom button

--- a/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
+++ b/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
@@ -9,6 +9,7 @@
 
 <div class="text-end">
     <button id="uploadOpenModalButton" class="btn btn-primary">Upload</button>
+    <a class="btn btn-success" href="#footer" role="button">⏬</a>
 </div>
 
 <table class="table">
