--- a/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
+++ b/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
@@ -216,7 +216,7 @@
                 
                 for (const i in item.attached_media) {
                     const mediaId = item.attached_media[i];
-                    attachments.append("<p class=\"mb-0\">📷 " + mediaNameCache[mediaId] + " (<a href=\"#\" class=\"media-attachment-view\" data-media-idx=\"" + i + "\">view</a>, <a href=\"#\" class=\"media-attachment-remove\" data-media-idx=\"" + i + "\">remove</a>)</p>");
+                    attachments.append("<p class=\"mb-0\">📷 " + mediaNameCache[mediaId] + " (<a href=\"/media/" + mediaId + "/preview\" target=\"_blank\" data-media-idx=\"" + i + "\">view</a>, <a href=\"#\" class=\"media-attachment-remove\" data-media-idx=\"" + i + "\">remove</a>)</p>");
                 }
                 
                 clone.appendTo(container);
@@ -378,23 +378,6 @@
                 currentThread.items.splice(idx, 1);
                 
                 rebuildPostsContainer();
-            });
-            
-            $(".attachments").on("click", "a.media-attachment-view", function () {
-                const itemIdx = $(this).parent().parent().parent().attr("data-thread-item-idx");
-                const mediaIdx = $(this).attr("data-media-idx");
-                
-                const mediaId = currentThread.items[itemIdx].attached_media[mediaIdx];
-                
-                $.ajax({
-                    method: "GET",
-                    url: "/api/v1/media/" + mediaId + "/url",
-                }).done(function (response) {
-                    window.open(response.url, "_blank");
-                }).fail(function () {
-                    $("#error-element").text("Failed to generate pre-signed URL.");
-                    $("#error-modal").modal("show");
-                });
             });
             
             $(".attachments").on("click", "a.media-attachment-remove", function () {
